--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@ionic-native/splash-screen": "~4.18.0",
     "@ionic-native/status-bar": "~4.18.0",
     "@ionic/storage": "2.2.0",
+    "com.red_folder.phonegap.plugin.backgroundservice": "git+https://github.com/felipe-ff/ionic-bgs-core.git",
     "cordova-android": "7.0.0",
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-ionic-keyboard": "^2.1.3",
@@ -51,7 +52,8 @@
       "cordova-plugin-ionic-webview": {
         "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
       },
-      "cordova-plugin-ionic-keyboard": {}
+      "cordova-plugin-ionic-keyboard": {},
+      "com.red_folder.phonegap.plugin.backgroundservice": {}
     },
     "platforms": [
       "android"
