--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "@ionic-native/splash-screen": "~4.18.0",
     "@ionic-native/status-bar": "~4.18.0",
     "@ionic/storage": "2.2.0",
-    "com.red_folder.phonegap.plugin.backgroundservice": "git+https://github.com/felipe-ff/ionic-bgs-core.git",
+    "com.red_folder.phonegap.plugin.backgroundservice": "git+https://github.com/fjms/ionic-bgs-core.git",
     "cordova-android": "7.0.0",
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-ionic-keyboard": "^2.1.3",
