--- a/package.json
+++ b/package.json
@@ -26,9 +26,11 @@
     "@ionic/storage": "2.2.0",
     "com.red_folder.phonegap.plugin.backgroundservice": "git+https://github.com/fjms/ionic-bgs-core.git",
     "cordova-android": "7.0.0",
+    "cordova-plugin-badge": "^0.8.8",
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-ionic-keyboard": "^2.1.3",
     "cordova-plugin-ionic-webview": "^3.1.2",
+    "cordova-plugin-local-notification": "^0.9.0-beta.2",
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-statusbar": "^2.4.2",
     "cordova-plugin-whitelist": "^1.3.3",
@@ -53,7 +55,8 @@
         "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
       },
       "cordova-plugin-ionic-keyboard": {},
-      "com.red_folder.phonegap.plugin.backgroundservice": {}
+      "com.red_folder.phonegap.plugin.backgroundservice": {},
+      "cordova-plugin-local-notification": {}
     },
     "platforms": [
       "android"
